added ability to submit tasks

--- a/iwsoj/iwsoj/static/template.html
+++ b/iwsoj/iwsoj/static/template.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div id="test"></div>
     <p id="Task">Task</p>
     <p id="Desc">Desc</p>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
