--- a/iwsoj/iwsoj/static/tasks.html
+++ b/iwsoj/iwsoj/static/tasks.html
@@ -2,22 +2,15 @@
 <html>
 
 <head>
-    <script src="src/app.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="src/tasks.js"></script>
 </head>
 
-<body onload="getTasks(0)">
-    <button onclick="getTasks(0)">1</button>
-    <button onclick="getTasks(1)">2</button>
-    <button onclick="getTasks(2)">3</button>
-    <button onclick="getTasks(3)">4</button>
-    <button onclick="getTasks(4)">5</button>
-    <button onclick="getTasks(5)">6</button>
-    <button onclick="getTasks(6)">7</button>
-    <button onclick="getTasks(7)">8</button>
-    <button onclick="getTasks(8)">9</button>
-    <button onclick="getTasks(9)">10</button>
-    <p id="title"></p>
-    <p id="statement"></p>
+<body onload="getAllTasks()">
+    <div id="tasks"></div>
+    <form id="sender"></form>
 </body>
 
 </html>
