--- a/iwsoj/iwsoj/static/tasks.html
+++ b/iwsoj/iwsoj/static/tasks.html
@@ -10,7 +10,7 @@
     <script src="src/tasks.js"></script>
 </head>
 
-<body onload="getAllTasks()">
+<body>
     <div id="tasks"></div>
     <form id="sender"></form>
 </body>
